--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,7 +35,7 @@
             <p><input type="email" name="email" placeholder="e.g. john.doe@email.com" required></p>
             <p><label for="Email">Password</label></p>
             <p><input type="password" name="password" required></p>
-            <p><input type="checkbox" name="legal" id="legal"  required>I accept the <a href="#">Terms of Service</a> and the <a href="#">Professional Terms of Service</a></p>
+            <p><input type="checkbox" name="legal" id="legal" required>I accept the <a href="#">Terms of Service</a> and the <a href="#">Professional Terms of Service</a></p>
             <button class="btn-enviar" type="submit">Create a account</button>
         </form>
     </div> 
